[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mapiry"
version = "1.0.0"
description = "A comprehensive Python SDK for Mapillary API v4"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  {name = "tikisan", email = "s2501082@sendai-nct.jp"},
]
keywords = ["mapillary", "api", "sdk", "street-view", "imagery", "computer-vision", "gis"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
  "requests>=2.25.0",
  "urllib3>=1.26.0",
  "python-dateutil>=2.8.0",
  "typing-extensions>=4.0.0",
  "pydantic>=1.8.0"
]

[project.urls]
Homepage = "https://github.com/tikipiya/Mapiry"
"Bug Tracker" = "https://github.com/tikipiya/Mapiry/issues"
Documentation = "https://github.com/tikipiya/Mapiry/blob/main/README.md"
Source = "https://github.com/tikipiya/Mapiry"
